<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.developteam.detectfall.myapplication.activity.TestActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/edtXYZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtx"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/frame"
                android:gravity="center"
                android:hint="@string/x"
                android:inputType="numberDecimal|numberSigned"  />

            <EditText
                android:id="@+id/edty"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/frame"
                android:gravity="center"
                android:hint="@string/y"
                android:inputType="numberDecimal|numberSigned"  />

            <EditText
                android:id="@+id/edtz"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/frame"
                android:gravity="center"
                android:hint="@string/z"
                android:inputType="numberDecimal|numberSigned"  />
        </LinearLayout>


        <EditText
            android:id="@+id/edtacc"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/edtXYZ"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/frame"
            android:gravity="center"
            android:hint="@string/acc"
            android:inputType="numberDecimal|numberSigned" />


        <TextView
            android:id="@+id/tvdom"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="5dp"
            android:background="@drawable/frame"
            android:textSize="@dimen/textsize"
            android:layout_below="@id/edtacc"
            android:scrollbars = "horizontal"
            android:ellipsize="end"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvdom"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/btncal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/calculate" />

            <Button
                android:id="@+id/btnclear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/clear" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
