<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.developteam.detectfall.myapplication.activity.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:onClick="onClick"
                android:padding="10dp"
                android:src="@drawable/left48w" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/back"
                android:text="Setting"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/formsetip"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/toolbar"
        android:background="@drawable/frame"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/ip_address"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/ipaddress"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="right"
            android:text="@string/defaultip"
            android:textSize="@dimen/textsize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/formsettel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/formsetip"
        android:background="@drawable/frame"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/emergency_contact"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:gravity="right"
            android:text=""
            android:textSize="@dimen/textsize" />
    </LinearLayout>

</RelativeLayout>
